--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc && node dist/server.js"
+    "build": "tsc && node dist/server.js",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
