--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.13.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.6",
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
+    "prisma": "^6.13.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
