--- a/package.json
+++ b/package.json
@@ -10,20 +10,27 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc && node dist/server.js",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.13.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.6",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.0.5",
     "prisma": "^6.13.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
