--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "3000:3000"
     volumes:
       - .:/app
-      - /app/node_modules
+      # - /app/node_modules
     command: npx tsx src/server.ts
     depends_on:
       - db
