--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^4.0.14"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.6",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
     "@types/supertest": "^6.0.3",
     "jest": "^30.0.5",
