--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,14 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
+    // Output settings
     "sourceMap": true,                    /* Create source map files for emitted JavaScript files. */
     "outDir": "./dist",                   /* Specify an output folder for all emitted files. */
-    "strict": true
+    // Type safety
+    "strict": true,
+    // Module resolution
+    "module": "CommonJS",
+    "moduleResolution": "node"
   },
   "include":["src/**/*"],
   "exclude":["node_modules"]
