--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "taskforge",
   "version": "1.0.0",
   "description": "**A scalable, high-performance backend API for a Trello-inspired project management app built with Node.js, Express, and PostgreSQL.** --- ## Features (MVP) - User registration and login with JWT authentication   - Basic User and Board models with PostgreSQL via Prisma ORM   - Authenticated board creation and listing   - Clean, scalable project architecture with TypeScript   - Environment variable management with dotenv   - Input validation and error handling   - Prepared for future real-time collaboration and integrations   --- ## Tech Stack - **Node.js**   - **TypeScript**   - **Express.js**   - **PostgreSQL**   - **Prisma ORM**   - **JWT Authentication**   - **bcrypt** for password hashing   - **Redis** (planned for caching & background jobs)   --- ## Getting Started",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "directories": {
     "doc": "docs"
